--- a/composer.json
+++ b/composer.json
@@ -17,20 +17,17 @@
         }
     ],
     "require": {
-        "php": "^7.4",
-        "php-di/invoker": "^2.0",
-        "psr/container": "^1.0",
-        "psr/http-server-middleware": "^1.0",
-        "qubus/http": "^1.0",
-        "qubus/injector": "^1.0",
+        "php": ">=8.1",
+        "php-di/invoker": "^2.2",
+        "qubus/http": "^2.0",
+        "qubus/injector": "^2.2",
         "relay/relay": "^2.1",
         "spatie/macroable": "^1.0"
     },
     "require-dev": {
-        "laminas/laminas-coding-standard": "^2.1",
+        "laminas/laminas-coding-standard": "^2.0",
         "mockery/mockery": "^1.3.1",
-        "php-di/php-di": "^6.3",
-        "phpunit/phpunit": "^6.0",
+        "phpunit/phpunit": "^9.0",
         "squizlabs/php_codesniffer": "^3.3.1"
     },
     "autoload": {
@@ -49,10 +46,14 @@
     "scripts": {
         "test": "vendor/bin/phpunit",
         "cs-check": "phpcs",
-        "cs-fix": "phpcbf"
+        "cs-fix": "phpcbf",
+        "security-checker": "./vendor/bin/security-checker security:check composer.lock"
     },
     "config": {
         "optimize-autoloader": true,
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
