--- a/composer.json
+++ b/composer.json
@@ -13,21 +13,21 @@
     "authors": [
         {
             "name": "Joshua Parker",
-            "email": "josh@joshuaparker.blog"
+            "email": "joshua@joshuaparker.dev"
         }
     ],
     "require": {
-        "php": ">=8.1",
-        "php-di/invoker": "^2.2",
-        "qubus/http": "^2.0",
-        "qubus/injector": "^2.2",
-        "relay/relay": "^2.1",
-        "spatie/macroable": "^1.0"
+        "php": ">=8.2",
+        "php-di/invoker": "^2",
+        "qubus/http": "^3",
+        "qubus/injector": "^3",
+        "relay/relay": "^2",
+        "spatie/macroable": "^1"
     },
     "require-dev": {
-        "laminas/laminas-coding-standard": "^2.0",
         "mockery/mockery": "^1.3.1",
         "phpunit/phpunit": "^9.0",
+        "qubus/qubus-coding-standard": "^1.1",
         "squizlabs/php_codesniffer": "^3.3.1"
     },
     "autoload": {
@@ -46,8 +46,7 @@
     "scripts": {
         "test": "vendor/bin/phpunit",
         "cs-check": "phpcs",
-        "cs-fix": "phpcbf",
-        "security-checker": "./vendor/bin/security-checker security:check composer.lock"
+        "cs-fix": "phpcbf"
     },
     "config": {
         "optimize-autoloader": true,
