--- a/composer.json
+++ b/composer.json
@@ -17,18 +17,16 @@
         }
     ],
     "require": {
-        "php": ">=8.2",
+        "php": ">=8.4",
         "php-di/invoker": "^2",
-        "qubus/http": "^3",
+        "qubus/http": "^4",
+        "qubus/inheritance": "^3.0",
         "qubus/injector": "^3",
-        "relay/relay": "^2",
-        "spatie/macroable": "^1"
+        "relay/relay": "^2"
     },
     "require-dev": {
-        "mockery/mockery": "^1.3.1",
-        "phpunit/phpunit": "^9.0",
-        "qubus/qubus-coding-standard": "^1.1",
-        "squizlabs/php_codesniffer": "^3.3.1"
+        "mockery/mockery": "^1",
+        "qubus/qubus-coding-standard": "^1.1"
     },
     "autoload": {
         "psr-4": {
